2011-05-18  Daiki Ueno  <ueno@unixuser.org>

	* basic.c (check_pubkey_crypt): Remove unused "unpad" flag.

2011-05-11  Daiki Ueno  <ueno@unixuser.org>

	* basic.c (check_pubkey_sign): Add an OAEP flag parsing test case.
	(check_pubkey_crypt): New.
	(do_check_one_pubkey): Call it.
	(check_one_pubkey): Free SKEY and PKEY.

2011-04-11  Werner Koch  <wk@g10code.com>

	* basic.c (mismatch): New.
	(check_ctr_cipher): Remove length error code checks.  Add
	truncation and streaming checks.

2011-04-04  Werner Koch  <wk@g10code.com>

	* keygrip.c (main): Add option --repetitions.
	(check): Make use of it.

2011-03-28  Werner Koch  <wk@g10code.com>

	* random.c (readn): Remove used var P.

2011-02-21  Werner Koch  <wk@g10code.com>

	* version.c (main): Do a verbatim check of the version string.
	* basic.c (main): Ditto.  But die on mismatch.

	* benchmark.c (md_bench): Allow for the --alignment option.
	(main):  Allow alignments between 1 and 16.

2011-02-16  Werner Koch  <wk@g10code.com>

	* benchmark.c (main): Add option --disable-hwf.

	* basic.c (DIM): New.
	(check_bulk_cipher_modes): New.
	(main): Run new test.

2011-02-15  Werner Koch  <wk@g10code.com>

	* benchmark.c: Add option --cipher-with-keysetup.
	(cipher_bench): Implement this option.

2011-02-14  Werner Koch  <wk@g10code.com>

	* benchmark.c: Add option --alignment.

2011-02-01  Werner Koch  <wk@g10code.com>

	* curves.c: New.

2011-01-04  Werner Koch  <wk@g10code.com>

	* Makefile.am (LDADD): Fix typo in last change.  Reported by
	Andrey Jivsov.

2010-07-19  Werner Koch  <wk@g10code.com>

	* Makefile.am (LDADD): Add GPG_ERROR_LIBS to help a new wannabe ld.

2010-06-10  Werner Koch  <wk@g10code.com>

	* t-mpi-bit.c (mpi2bitstr_nlz): Handle case for LENGTH==0.

2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	* basic.c (check_cbc_mac_cipher): Print more info.
	(main): Factor some code out to ...
	(check_cipher_modes): .. new.

2010-04-06  Brad Hards  <bradh@frogmouth.net>  (wk)
