@@ -1,3 +1,13 @@
+2011-05-24  Daiki Ueno  <ueno@unixuser.org>
+
+	* basic.c (do_check_one_pubkey): Add new arg ALGO to tell which PK
+	algorithm is used for check_pubkey_sign, check_pubkey_crypt,
+	check_pubkey_grip.
+	(check_pubkey_sign): Add new arg ALGO; skip test data if it does
+	not match ALGO.
+	(check_pubkey_crypt): Add new arg ALGO.
+	(check_pubkey_grip): Ditto.
+
 2011-05-18  Daiki Ueno  <ueno@unixuser.org>
 
 	* basic.c (check_pubkey_crypt): Remove unused "unpad" flag.
